Getting close to finishing log-in screen CSS

--- a/CSS/Login-Form-Stylesheet.css
+++ b/CSS/Login-Form-Stylesheet.css
@@ -6,16 +6,18 @@
 body {
     font-family: ABeeZee;
     background-image: url("../Images-Fonts/Login-Form-Background.jpg");
-    background-size:cover;
+    background-size: cover;
     background-repeat: no-repeat;
-    align-items: center;
-    flex-direction: column;
-    height: 100vh;
+    height: 100%;
+    overflow-x: hidden;
     color: white;
 }
 
 h1 {
     font-weight: bold;
+    display: flex;
+    height: 100%;
+    justify-content: center;
 }
 
 p {
@@ -24,65 +26,49 @@ p {
 }
 
 form {
-	background-color: #744578;
-    border-radius: 12px;
 	display: flex;
+    height: 100%;
     justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	padding: 50px 50px;
-    height: 100%;
 	text-align: left;
 }
 
 input {
-    position: absolute;
 	background: none;
     border: none;
 }
 
 .username {
-    width: 277px;
-    height: 36px;
-    left: 944px;
-    top: 415px;
-    font-size: 20px;
+    position: relative;
+    font-size: 25px;
     font-family: ABeeZee;
-    opacity: 1;
+    transform: translate(150px, -40px);
     border-bottom: 2px solid white;
 }
 
 .password {
-    width: 277px;
-    height: 36px;
-    left: 944px;
-    top: 503px;
-    font-size: 20px;
+    position: relative;
+    font-size: 25px;
     font-family: ABeeZee;
-    opacity: 1;
+    transform: translate(150px, 0px);
     border-bottom: 2px solid white;
 }
 
+.remember {
+    position: relative;
+    transform: translate(98px, -10px);
+}
 
 ::placeholder {
     color:white;
+    opacity: 1;
 }
 
 .forgotten-password {
-    position: absolute;
-    width: 297;
-    height: 58px;
-    left: 890px;
-    top: 608px;
-}
-
-.remember {
-    position: absolute;
-    border: 1px solid white;
-    width: 34px;
-    height: 35px;
-    left: 1036px;
-    top: 565px;
+    position: relative;
+    transform: translate(150px, -20px);
 }
 
 .login-button1 {
@@ -117,22 +103,37 @@ input {
 }
 
 .login-button2 {
+    position: relative;
+    transform: translate(150px, -20px);
 	border-radius: 12px;
 	border: 2px solid #ffffff;
 	background-color: #744578;
 	color: #FFFFFF;
-	font-size: 20px;
-	padding: 12px 85px;
+	font-size: 18px;
+	padding: 12px 105px;
     letter-spacing: 1px;
 	text-transform: uppercase;
 }
 
 .form-container {
     position: absolute;
+    border-radius: 30px;
+    position: absolute;
     width: 709px;
     height: 616px;
     left: 544px;
     top: 254px;
     background: #744578;
-    border-radius: 30px;
+    z-index: 1;
+}
+
+.overlay-container {
+    position: relative;
+    display: flex;
+    width: 50px;
+    flex-wrap: wrap;
+    text-align: center;
+    z-index: 2;
+    font-size: 30px;
+    transform: translate(570px, 450px);
 }
