--- a/CSS/Login-Form-Stylesheet.css
+++ b/CSS/Login-Form-Stylesheet.css
@@ -9,7 +9,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
     color: white;
 }
 
@@ -42,7 +42,7 @@ input {
 
 .username {
     position: relative;
-    font-size: 25px;
+    font-size: 28px;
     font-family: ABeeZee;
     transform: translate(150px, -40px);
     border-bottom: 2px solid white;
@@ -50,7 +50,7 @@ input {
 
 .password {
     position: relative;
-    font-size: 25px;
+    font-size: 28px;
     font-family: ABeeZee;
     transform: translate(150px, 0px);
     border-bottom: 2px solid white;
@@ -63,6 +63,7 @@ input {
 
 ::placeholder {
     color:white;
+    padding-left: 50px;
     opacity: 1;
 }
 
