--- a/CSS/SignUpForm.css
+++ b/CSS/SignUpForm.css
@@ -8,9 +8,11 @@ body {
     background-image: url("../Images-Fonts/signupbackground.jpg");
     background-size: cover;
     background-position: center;
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
     font-family: ABeeZee;
     color: #FFFFFF;
+    background-repeat: no-repeat;
 }
 .login-btn {
     position: absolute;
@@ -27,7 +29,7 @@ body {
     text-transform: uppercase;
 }
 .sign-up-btn1 {
-    position: absolute;
+    position: relative;
     background-color: #DA5263;
     width: 170px;
     height: 56px;
@@ -64,6 +66,7 @@ h2 {
     left: 18px;
     top: 90px;
     text-align: center;
+
 }
 
 form {
@@ -93,7 +96,7 @@ input {
     left: 25%;
     margin-top: -50px;
     margin-left: -100px;
-}
+} 
 
 ::placeholder {
     color: white;
@@ -203,8 +206,10 @@ input {
 .form-container {
     position: absolute;
     display: flex;
-    width: 709px;
-    height: 616px;
+    /*width: 709px;
+    height: 616px; */
+    width: 41%;
+    height: 55%;
     top: 254px;
     left: 544px;
     border-radius: 30px;
