--- a/CSS/front_page_styles.css
+++ b/CSS/front_page_styles.css
@@ -87,7 +87,7 @@
     display: flex;  
     justify-content: space-around;
     align-items: center;
-    background-image:url(img0.jpg);
+    background-image:url(../Images-Fonts/img0.jpg);
     background-position: center;
     background-size: cover;
 }
