--- a/CSS/home_styles.css
+++ b/CSS/home_styles.css
@@ -6,6 +6,11 @@
     font-family: 'Poppins', sans-serif;
 
 }
+
+html{
+    scroll-behavior: smooth;
+}
+
 .navbar {
     width: 100%;
     height: 80px;
@@ -15,6 +20,10 @@
     align-items: center;
     color: #fff;
 }
+
+.hamburger{  
+    display:none;   
+   } 
 
 .navbar h1{
     background-color: tomato;
@@ -52,16 +61,9 @@
 }
 
 .img{
-    border-radius: 70%;
-
-position: absolute;
-width: 55px;
-height: 55px;
-left: 1700px;
-top: 12px;
-
-background: url(../Images-fonts/img6.jpg);
-border: 2px solid #DA5263;
+    width: 20%;
+    border-radius: 50%;
+    border: 3px solid #da5263;
 }
 
 .img:hover{
@@ -92,15 +94,14 @@ input {
 }
 
 .trending__header {
-   
-    border-radius:12px;
+    /* border-radius:12px;
     margin-top: 1rem;
-    gap: 1.25rem;
-    width: 70%;
-    display: flex;
-    justify-content: space-around;
-    margin-left: 200px;
-    text-align: center;
+    width: 70%; */
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    justify-items: center;
+    margin-left: 50px;
+    gap: 50px;
 }
 
 .search__input{
@@ -108,8 +109,9 @@ input {
     height: 30px;
     border-radius: 6px;
     border: none;
-    padding: 15px;
+    padding: 20px;
     top: 300px;
+    margin-top: 10px;
 }
 
 .search__input::placeholder{
@@ -117,7 +119,7 @@ input {
 }
 
 .search__wrapper > h1 {
-   padding: 50px 0px 20px 0px;
+   padding: 170px 0px 20px 0px;
    font-weight: 500;
 }
 
@@ -135,61 +137,259 @@ input {
    gap: 1rem;
 }
 
-.places a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 25px;
-    font-weight: bold;
-    border-radius: 45px;
-    padding: 14px 50px;
-    background-color: mediumseagreen;
-
-}
-
-.place a:hover {
-    letter-spacing: 3px;
-    transition: 0.6s;
-
-
-}
-
-.trending__header a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 25px;
-    font-weight: bold;
-    border-radius: 45px;
-    padding: 8px;
-    background-color: mediumseagreen;
-}
-
-.trending__header a:hover {
-    letter-spacing: 3px;
-    transition: 0.6s;
-
-}
-
-.footer{
-    background-color: rgb(11, 93, 187);
-    align-items: center;
-    width: 100%;
-    height: 50px;
+.left__col{
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
 }
 
-.footer p{
-    color: #fff ;
-    align-items: center;
+
+
+.trending__img {
+   display: flex;
+   height: 200px;
+   width: 200px;
+   border-radius: 20px;
 }
 
-.footer a{
-    color:#fff;
-    font-size: 30px;
-}
-
-.footer a:hover{
-    color:MediumSeaGreen;
-    letter-spacing: 3px;
+.trending__img:hover{
+    box-shadow: 5px 5px #acaaaa;
     transition: 0.5s;
 }
+
+.trending_title {
+    margin-left: 50px;
+}
+
+.trending__name{
+    text-align: center;
+    margin: 5px 0px;
+    color: #808080;
+}
+
+.trending__link{
+    text-decoration: none;
+}
+
+.trending_attraction__title {
+    color: #fff; 
+    padding-top: 10px;
+    margin-left: 50px;
+}
+
+.trending_attracion__name {
+    text-align: center;
+    margin: 5px 0px;
+    color: #fff; 
+}
+
+
+.trending_attraction__img {
+    display: flex;
+    height: 200px;
+    width: 200px;
+    border-radius: 20px;
+}
+.attraction_section {
+    background-color: rgb(11, 93, 187);
+}
+
+
+
+footer > ul {
+    list-style: none;
+    padding-left: 0;
+  }
+  
+footer {
+    background-color: rgb(11, 93, 187);
+    color: #bbb;
+    margin: 20px 0px;
+    line-height: 1.5;
+  }
+footer a {
+    text-decoration: none;
+    color: #eee;
+  }
+footer > a:hover {
+    text-decoration: underline;
+  }
+
+  .ft-title {
+    color: #fff;
+    font-family: "Merriweather", serif;
+    font-size: 1.375rem;
+    padding-bottom: 0.625rem;
+  }
+
+
+.ft-main {
+  padding: 1.25rem 1.875rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.ft-main-item {
+  padding: 1.25rem;
+  min-width: 12.5rem;
+}
+
+form {
+  display: flex;
+  flex-wrap: wrap;
+}
+input[type="email"] {
+  border: 0;
+  padding: 0.625rem;
+  margin-top: 0.3125rem;
+}
+input[type="submit"] {
+  background-color: #da5263;
+  color: #fff;
+  cursor: pointer;
+  border: 0;
+  padding: 0.625rem 0.9375rem;
+  margin-top: 0.3125rem;
+}
+
+
+.ft-social {
+  padding: 0 1.875rem 1.25rem;
+}
+.ft-social-list {
+  display: flex;
+  justify-content: center;
+  border-top: 1px #777 solid;
+  padding-top: 1.25rem;
+}
+.ft-social-list li {
+  margin: 0.5rem;
+  font-size: 1.25rem;
+}
+
+
+.ft-legal {
+  padding: 0.9375rem 1.875rem;
+  background-color: #333;
+}
+.ft-legal-list {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.ft-legal-list li {
+  margin: 0.125rem 0.625rem;
+  white-space: nowrap;
+}
+
+.ft-legal-list li:nth-last-child(2) {
+    flex: 1;
+}
+
+
+@media (max-width:768px){
+    .menu{
+        position: absolute;
+        flex-direction: column;   
+        background: gray;
+        box-shadow: 0 3px 5px rgba(0,0,0,0.4);
+        top: 80px;
+        /* left: 15%; */
+        right: 0%;
+        width: 30%;
+        height: 150px;
+        text-align: center;
+        transform: translateX(140%);
+        transition: transform 0.3s ease-in;
+        overflow: hidden;
+     }
+    .trending__header {
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        justify-items: center;
+        margin-left: 50px;
+        gap: 50px;
+    }
+    .img {
+        width: 40px;
+    }
+
+    
+    .hamburger{
+        cursor: pointer;
+        justify-content: flex-end;
+      }
+
+
+      .line-1,.line-2,.line-3{
+        display: block;
+        margin: 5px auto;
+        width: 30px;
+        height: 3px;
+        background-color: white;
+        transition: 0.4s;  
+      }
+      .open .line-1{
+       transform: rotate(45deg) translate(8px,3px) ;
+      }
+    
+      .open .line-2{
+       opacity: 0;
+      }
+    
+      .open .line-3{
+        transform: rotate(-45deg) translate(8px,-3px);
+      }
+      .menu.show{
+        transform: translate(0%);
+        color: black;
+      }
+      .nav-link::after{
+       display: none;
+      }
+
+  
+    .hamburger{
+        display: block;
+        cursor: pointer;
+      }
+
+      .menu ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+      
+
+}
+
+@media (max-width:450px){
+
+    .trending_title{
+        text-align: center;
+    }
+    
+   .trending__header {
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: center;
+        margin-left: 50px;
+        gap: 50px;
+    }
+
+    .trending_attraction__title{
+        text-align: center;
+    }
+
+}
+
+@media only screen and (min-width: 477px ) {
+    .ft-main {
+      justify-content: space-evenly;
+    }
+  }
+  @media only screen and (min-width: 1240px ) {
+    .ft-main {
+      justify-content: space-evenly;
+    }
+  }
