--- a/CSS/info.css
+++ b/CSS/info.css
@@ -323,53 +323,6 @@ h2 {
     width: 70%;
 }
 
-.dot {
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 10px;
-    height: 10px;
-    z-index: 99;
-    background: #FFF;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: .5s;
-    box-shadow: 0px 0px 5px #fff;
-}
-
-.dot.a1 {
-    margin-left: -30px
-}
-
-.dot.a2 {
-    margin-left: -10px
-}
-
-.dot.a3 {
-    margin-left: 10px
-}
-
-.dot.a4 {
-    margin-left: 30px
-}
-
-.dot.a1:hover {
-    background: #fff
-}
-
-.dot.a2:hover {
-    background: #fff
-}
-
-.dot.a3:hover {
-    background: #fff
-}
-
-.dot.a4:hover {
-    background: #fff
-}
-
 #info {
     position: absolute;
     top: -65px;
@@ -392,4 +345,162 @@ h2 {
     left: 10px;
     bottom: 15px;
     font-weight: 600;
+}
+
+.show_data{
+    margin-top: -35px;
+}
+
+.show_datas{
+    margin-top: -35px;
+}
+
+.mob_only{
+    display: none;
+}
+
+@media only screen and (max-width: 1024px) {
+    .search input{
+        width: 400px;
+       
+    }
+    .search .fa-search{
+        display: none;
+    }
+    input{
+    left: 100px;
+    }
+}    
+
+
+@media only screen and (max-width: 768px) {
+ .show_data{
+    margin-left: -24px;
+ }
+ .col-md-6{
+    width: 100%;
+ }
+ .btn_set{
+    
+    margin-left: -137px;
+    margin-top: 55px;
+
+ }
+ .fa-star{
+    font-size: 18px !important;
+    margin-top: 10px;
+ }
+ .inline_css{
+    display: inline;
+ }
+ #rating{
+
+    font-size: 18px !important;  
+ }
+ .margin_left_0{
+    margin-left: 20px !important;
+ }
+ .mob_only{
+    display: block;
+ }
+ .desktop_only{
+    display: none;
+ }
+ .search input{
+    width: 327px;
+ }
+ input{
+    left: 90px;
+ }
+ .inline_css{
+    display: inline;
+ }
+}
+
+/*Slider*/
+/* Slideshow container */
+.slideshow-container {
+  width: 100%;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+  display: none;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
