--- a/CSS/profile_page_styles.css
+++ b/CSS/profile_page_styles.css
@@ -3,19 +3,18 @@
     margin: 0;
     box-sizing: border-box;
     list-style: none;
-    font-family: 'Poppins', sans-serif;
+    /* font-family: 'Poppins', sans-serif; */
 }
 
 
-body{
+body {
     width: 100%;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     min-height: 100vh;
     min-width: calc(100px + 15vw);
-    background-color:black;
-
+    background-color:rgb(255, 255, 255);
 }
 
 
@@ -23,16 +22,15 @@ body{
 .navbar {
     width: 100%;
     height: 80px;
-    background-color: #000;
+    background-color: transparent;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: #fff;
 }
 
 .navbar h1{
-    background-color: tomato;
-    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+    background-color: #A067A5;
+    background-image: linear-gradient(to top, #A067A5 0%, #E8358B 100%);
     background-size: 100%;
     background-clip: text;
     -webkit-background-clip: text;
@@ -45,7 +43,6 @@ body{
     cursor:pointer;
     text-decoration: none;
     font-size: 2rem;
-    
 }
 
 .menu ul{
@@ -56,7 +53,7 @@ body{
 
 .menu ul li a{
     text-decoration: none;
-    color:#fff;
+    color:rgb(0, 0, 0);
     padding: 5px 12px;
     letter-spacing: 2px;
     font-size: 18px;
@@ -65,7 +62,7 @@ body{
 
 .menu ul li a:hover{
     border-bottom: 4px solid #000;
-    transition: 1.8s;
+    transition: .5s;
 }
 
 .logo{
@@ -78,8 +75,6 @@ body{
     padding: 0;
     display: flex;
     align-items: center;
-
-
 }
 
 .right__col a {
@@ -99,14 +94,30 @@ body{
 
 } */
 
+.header-image {
+    /*defining for cols_contain styling*/
+    }
+
+.cols_contain {
+    background-image: url(https://images.unsplash.com/photo-1471960098958-2059c6681742?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3701&q=80);
+    background-repeat: no-repeat;
+    background-position: .25px;   /*fix*/
+    position: relative;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+
 .header__wrapper{
-    background: url(../Images-Fonts/travel-world.jpg) no-repeat;
+    background-image: url(../Images-Fonts/travel-world.jpg) no-repeat;
     background-size: cover;
     background-position:center;
 }
 
 .img{
     border-radius: 50%;
+    border-width: 5em;
+    border:3px solid #A067A5;  
     width: 20%;
     margin-top: 20px;
     object-fit: cover;
@@ -124,7 +135,7 @@ body{
 
 .user-name{
     margin: 10px 0px;
-    color: #fff;
+    color: #A067A5;
     font-weight:500;
 }
 
@@ -151,7 +162,7 @@ body{
 
 .activity__header{
     margin: 20px 20px 0px 20px;
-    color: #fff;
+    color: #A067A5;
 }
 
 .img__wrapper{
