--- a/CSS/home_styles.css
+++ b/CSS/home_styles.css
@@ -7,23 +7,18 @@
 
 }
 
-body {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    min-height: 100vh;
-    min-width: calc(100px + 15vw);
-    background-color:rgb(255, 255, 255);
+html{
+    scroll-behavior: smooth;
 }
 
 .navbar {
     width: 100%;
     height: 80px;
-    background-color: transparent;
+    background-color: #000;
     display: flex;
     justify-content: space-around;
-    /* align-items: center; */
+    align-items: center;
+    color: #fff;
 }
 
 .hamburger{  
@@ -31,20 +26,19 @@ body {
    } 
 
 .navbar h1{
-    background-color: #A067A5;
-    background-image: linear-gradient(to top, #A067A5 0%, #E8358B 100%);
+    background-color: tomato;
+    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
     background-size: 100%;
-    background-clip: text;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
     display:flex;
     align-items: center;
-    justify-content: center;
     cursor:pointer;
     text-decoration: none;
-    font-size: 2rem;    
+    font-size: 2rem;
+    left: 300px;
 }
 
 .menu ul{
@@ -55,20 +49,15 @@ body {
 
 .menu ul li a{
     text-decoration: none;
-    color:rgb(0, 0, 0);
+    color:#fff;
     padding: 5px 12px;
     letter-spacing: 2px;
     font-size: 18px;
-    align-items: center;
 }
 
 .menu ul li a:hover{
     border-bottom: 4px solid #000;
-    transition: .5s;
-}
-
-.logo{
-    margin-left: 20px;
+    transition: 1.8s;
 }
 
 .img{
@@ -78,8 +67,8 @@ body {
 }
 
 .img:hover{
-    border-radius: 12px solid rgb(224, 40, 40);
-    transition: .5s;
+    border-radius: 12px solid #fff;
+    transition: 1.8s;
 }
 
 .search__wrapper {
@@ -169,6 +158,7 @@ input {
 
 .trending_title {
     margin-left: 50px;
+    margin-top: 10px;
 }
 
 .trending__name{
@@ -200,6 +190,12 @@ input {
     width: 200px;
     border-radius: 20px;
 }
+
+.title_rec{
+  margin-left: 50px;
+  margin-top: 10px;
+}
+
 .attraction_section {
     background-color: rgb(11, 93, 187);
 }
@@ -371,6 +367,12 @@ input[type="submit"] {
         gap: 10px;
     }
       
+    .row {
+      display: grid;
+      grid-template-columns: repeat(2,1fr);
+   
+    }
+    
 
 }
 
@@ -391,7 +393,12 @@ input[type="submit"] {
     .trending_attraction__title{
         text-align: center;
     }
-
+   
+    .row {
+      display: grid;
+      grid-template-columns: repeat(1,1fr);
+   
+    }
 }
 
 @media only screen and (min-width: 477px ) {
@@ -403,4 +410,50 @@ input[type="submit"] {
     .ft-main {
       justify-content: space-evenly;
     }
+
   }
+
+
+  
+
+
+#map {
+    height: 50%;
+    width: 80%;
+    margin-left: 150px;
+    margin-top: 20px;
+}
+
+.row {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  justify-items: center;
+  margin-left: 50px;
+  margin-top: 20px;
+  gap: 50px;
+}
+
+.card__img{
+  display: flex;
+  height: 300px;
+  width: 300px;
+  border-radius: 20px;
+
+}
+
+.card__body {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 0px;
+}
+
+.card_title {
+  width: 200px;
+}
+
+.alt_img{
+  width: 30px;
+  height: 30px;
+}
+
