--- a/CSS/front_page_styles.css
+++ b/CSS/front_page_styles.css
@@ -3,83 +3,14 @@
     margin: 0;
     box-sizing: border-box;
     list-style: none;
-    font-family: 'Poppins', sans-serif;
-
-}
-.navbar {
-    width: 100%;
-    height: 80px;
-    background-color: #000;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: #fff;
-}
-
-.navbar h1{
-    background-color: tomato;
-    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
-    display:flex;
-    align-items: center;
-    cursor:pointer;
-    text-decoration: none;
-    font-size: 2rem;
-}
-
-.menu ul{
-    display: flex;
-    align-items: center;
+    font-family: 'ABeeZee';
 
 }
 
-.menu ul li a{
-    text-decoration: none;
-    color:#fff;
-    padding: 5px 12px;
-    letter-spacing: 2px;
-    font-size: 18px;
+@font-face {
+    font-family: ABeeZee;
+    src: url("../Images-Fonts/ABeeZee-Regular.ttf");
 }
-
-.menu ul li a:hover{
-    border-bottom: 4px solid #000;
-    transition: 1.8s;
-}
-
-.Login a{
-    text-decoration: none;
-    color: #fff;
-    font-size: 18px;
-    font-weight: bold;
-    border-radius: 12px;
-    padding: 12px 30px;
-    border: 2px solid slateblue;
-}
-
-.Login a:hover{
-    background-color: slateblue;
-    transition: 0.6s;
-}
-
-.Signup a{
-    text-decoration: none;
-    color: #fff;
-    font-size: 18px;
-    font-weight: bold;
-    border-radius: 12px;
-    padding: 12px 30px;
-    border: 2px solid tomato;
-}
-
-.Signup a:hover{
-    background-color: tomato;
-    transition: 0.6s;
-
-} 
 
 .body{
     width: 100%;
@@ -92,89 +23,103 @@
     background-size: cover;
 }
 
+.main-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+img {
+    width: 500px;
+    height: 170px;
+}
+
 .heading{
-    width: 30%;
     text-align: center;
     color: #fff;
     font-weight: bold;
 }
 
 .heading h1{
-    font-size: 40px;
+    font-size: 32px;
     z-index: 999;
 }
 
-.heading a{
-    text-decoration: none;
-    color: #000;
-    font-size: 25px;
-    font-weight: bold;
-    border-radius: 45px;
-    padding: 14px 50px;
-    background-color: #fff;
-    z-index: 999;
-}
-
-.heading a:hover{
-    letter-spacing: 3px;
-    transition: 0.5s;
-
-}
-
-.tours{
-    display: flex;
-    width: 70%;
-    justify-content: space-around;
-}
-
-.places{
-    display: inline;
-    text-align: center;
-    border-radius: 12px;
-    z-index: 999;
-}
-
-.places h2{
-    color: #fff;
-    font-size: 35px;
-    letter-spacing: 2px;
-    
-}
-
-.places a{
-    text-decoration: none;
-    color: #000;
-    font-weight: bold;
+.heading h2 {
     font-size: 18px;
-    border-radius: 12px;
-    padding:12px 30px;
-    background-color: #fff;
-
 }
 
-.places a:hover{
-    background-color:MediumSeaGreen;
+.buttons button{
+    /* display: flex; */
+    margin: 10px;
+}
+
+.buttons button:hover{
     letter-spacing: 3px;
     transition: 0.5s;
+}
+
+.guest-button {
+    border: none;
+    border-radius: 40px;
+	background-color:rgb(11, 93, 187);
+	color: #FFFFFF;
+	font-size: 1em;
+	width: 7em;
+    height: 2.5em;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+}
+
+.signup-button {
+    border: none;
+    border-radius: 40px;
+	background-color:#DA5263;
+	color: #FFFFFF;
+	font-size: 1em;
+	width: 7em;
+    height: 2.5em;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+}
+.login-button {
+    border: none;
+    border-radius: 40px;
+	background-color:#744578;
+	color: #FFFFFF;
+	font-size: 1em;
+	width: 7em;
+    height: 2.5em;
+	letter-spacing: 1px;
+	text-transform: uppercase;
 }
 
 .footer{
+    display: flex;
+    direction: column;
     background-color: rgb(11, 93, 187);
     align-items: center;
     width: 100%;
-    height: 50px;
+    height: 100px;
     display: flex;
     justify-content: space-around;
 }
 
 .footer p{
     color: #fff ;
-    align-items: center;
+    text-align: center;
+}
+
+.icons {
+    display: flex;
+    justify-content: center;
 }
 
 .footer a{
     color:#fff;
     font-size: 30px;
+    margin: 10px;
 }
 
 .footer a:hover{
