--- a/CSS/ItineraryListPage.css
+++ b/CSS/ItineraryListPage.css
@@ -3,10 +3,13 @@
     margin: 0;
     box-sizing: border-box;
     list-style: none;
-    font-family: 'Poppins', sans-serif;
-    font-family: 
+    font-family: 'ABeeZee';
 }
 
+@font-face {
+    font-family: ABeeZee;
+    src: url("../Images-Fonts/ABeeZee-Regular.ttf");
+  }
 
 body {
     width: 100%;
@@ -67,7 +70,9 @@ body {
 }
 
 .logo{
-    margin-left: 20px;
+    margin-left: 15px;
+    width:auto;
+    height: 60px;
 }
 
 .upcoming-trips{
@@ -98,6 +103,7 @@ body {
 
 .activity__img--container{
     display: flex;
+    margin-left: 50px;
 }
 
 .fa-pencil{
@@ -106,7 +112,8 @@ body {
 }
 
 .activity__header {
-    margin: 0px 20px;
+    margin: 0px 50px;
+    margin-top: 20px;
 }
 
 h2 {
@@ -116,6 +123,7 @@ h2 {
 }
 
 h3 {
-    font-size: 1.5em ;
+    font-size: 1.5em;
     color: #ffffff;
+    margin-top: 20px;
 }
