--- a/CSS/profile_page_styles.css
+++ b/CSS/profile_page_styles.css
@@ -3,7 +3,12 @@
     margin: 0;
     box-sizing: border-box;
     list-style: none;
-    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'ABeeZee';
+}
+
+@font-face {
+    font-family: ABeeZee;
+    src: url("../Images-Fonts/ABeeZee-Regular.ttf");
 }
 
 
@@ -66,8 +71,11 @@ body {
 }
 
 .logo{
-    margin-left: 20px;
+    margin-left: 15px;
+    width:auto;
+    height: 60px;
 }
+
 
 .right__col ul{
     list-style-type: none;
@@ -158,11 +166,14 @@ body {
 
 .activity__img--container{
     display: flex;
+    margin-left: 20px;
 }
 
 .activity__header{
     margin: 20px 20px 0px 20px;
     color: #A067A5;
+    margin-left: 30px;
+    margin-top: 20px;
 }
 
 .img__wrapper{
